Use non-table positioning for homepage header so padding doesn't create z-index issues.

--- a/styles/homepage.less
+++ b/styles/homepage.less
@@ -28,6 +28,14 @@ body.homepage {
 // homepage navigation styles
 body.homepage {
     // MAIN NAVIGATION
+    #headerNav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        display: block;
+    }
+
     #headerNav nav,
     #sidecarNav nav {
       a,
